<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_warm">

    <TextView
        android:id="@+id/heading"
        style="@style/HeadingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/how_are_you_feeling"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtext"
        style="@style/BodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_right_answer"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <GridLayout
        android:id="@+id/moodGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtext">

        <Button
            style="@style/SecondaryPillButton"
            android:layout_width="150dp"
            android:layout_margin="8dp"
            android:text="@string/mood_motivated" />

        <Button
            style="@style/SecondaryPillButton"
            android:layout_width="150dp"
            android:layout_margin="8dp"
            android:text="@string/mood_calm" />

        <Button
            style="@style/SecondaryPillButton"
            android:layout_width="150dp"
            android:layout_margin="8dp"
            android:text="@string/mood_hopeful" />

        <Button
            style="@style/SecondaryPillButton"
            android:layout_width="150dp"
            android:layout_margin="8dp"
            android:text="@string/mood_confused" />

        <Button
            style="@style/SecondaryPillButton"
            android:layout_width="150dp"
            android:layout_margin="8dp"
            android:text="@string/mood_overwhelmed" />

        <Button
            style="@style/SecondaryPillButton"
            android:layout_width="150dp"
            android:layout_margin="8dp"
            android:text="@string/mood_avoiding" />
    </GridLayout>

    <ImageView
        android:id="@+id/bottomBlob"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/blob_pink_eyes"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnStartReflecting"
        style="@style/SecondaryPillButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:paddingHorizontal="48dp"
        android:text="@string/start_reflecting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>