<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_warm">

    <TextView
        android:id="@+id/heading"
        style="@style/HeadingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/what_goal_reflecting"
        android:textSize="40sp"
        android:lineSpacingMultiplier="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etGoalTitle"
        style="@style/PillInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        android:hint="@string/hint_goal_title"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <EditText
        android:id="@+id/etGoalWhy"
        style="@style/PillInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:hint="@string/hint_goal_why"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGoalTitle" />

    <TextView
        android:id="@+id/tvMoodPrompt"
        style="@style/BodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/goal_feel_prompt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etGoalWhy"
        app:layout_constraintTop_toBottomOf="@+id/etGoalWhy" />

    <HorizontalScrollView
        android:id="@+id/moodScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:paddingHorizontal="32dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/tvMoodPrompt">

        <RadioGroup
            android:id="@+id/rgMoods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbExcited"
                style="@style/SecondaryPillButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:button="@null"
                android:paddingHorizontal="20dp"
                android:text="@string/mood_excited" />

            <RadioButton
                android:id="@+id/rbNervous"
                style="@style/SecondaryPillButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:button="@null"
                android:paddingHorizontal="20dp"
                android:text="@string/mood_nervous" />

            <RadioButton
                android:id="@+id/rbDoubtful"
                style="@style/SecondaryPillButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:button="@null"
                android:paddingHorizontal="20dp"
                android:text="@string/mood_doubtful" />

            <RadioButton
                android:id="@+id/rbDetermined"
                style="@style/SecondaryPillButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:button="@null"
                android:paddingHorizontal="20dp"
                android:text="@string/mood_determined" />

            <RadioButton
                android:id="@+id/rbUnsure"
                style="@style/SecondaryPillButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:paddingHorizontal="20dp"
                android:text="@string/mood_unsure" />

        </RadioGroup>
    </HorizontalScrollView>

    <Button
        android:id="@+id/btnSaveGoal"
        style="@style/PillButton"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:paddingHorizontal="64dp"
        android:text="@string/save_goal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>